--- a/templates/result.html
+++ b/templates/result.html
@@ -34,10 +34,10 @@
 		<!-- Footer -->
 		<div class='footer'>
             <div class="contact">
-                <a target="_blank" href="https://github.com/anujvyas/Restaurant-Reviews-Sentiment-Analysis-Deployment"><i class="fab fa-github fa-lg contact-icon"></i></a>
-                <a target="_blank" href="https://www.linkedin.com/in/anujkvyas"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
+                <a target="_blank" href="https://github.com/omer1234567/ML"><i class="fab fa-github fa-lg contact-icon"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/syedomer-ahmed-9aa66891"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
             </div>
-            <p class='footer-description'>Made with ❤️ by Anuj Vyas.</p>
+            <p class='footer-description'>Made with ❤️ by Syed Omer Ahmed.</p>
         </div>
 
 	</body>
